--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   pie_chart: ^5.4.0
   responsive_size_helper_plus: ^1.0.5
   google_fonts: ^6.2.1
+  fl_chart: ^0.66.2
 
 dev_dependencies:
   flutter_test:
